[gd_scene load_steps=9 format=4 uid="uid://dkv6u2gfs3foh"]

[ext_resource type="Script" uid="uid://blmemp0n5dd7w" path="res://rooms/testroom.gd" id="1_0oq46"]
[ext_resource type="PackedScene" uid="uid://dc358le4iqqwc" path="res://components/sticks.tscn" id="1_gxvrf"]
[ext_resource type="Texture2D" uid="uid://wx1urquidgxw" path="res://assets/pixel.png" id="2_0oq46"]
[ext_resource type="PackedScene" uid="uid://d0ujqkp02vcn0" path="res://components/camera.tscn" id="4_heske"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_qk4a2"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_heske"]
texture = ExtResource("2_0oq46")
0:0/size_in_atlas = Vector2i(2, 2)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:0/size_in_atlas = Vector2i(2, 2)
2:0/0 = 0
4:0/size_in_atlas = Vector2i(2, 2)
4:0/0 = 0

[sub_resource type="TileSet" id="TileSet_480xm"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
sources/1 = SubResource("TileSetAtlasSource_heske")

[sub_resource type="Curve" id="Curve_0oq46"]
_data = [Vector2(0, 0.191011), 0.0, 2.98704, 0, 1, Vector2(0.270833, 1), 2.98704, 0.0, 1, 0]
point_count = 2

[node name="testroom" type="Node2D"]
script = ExtResource("1_0oq46")
metadata/_edit_vertical_guides_ = [4572.0]
metadata/_edit_horizontal_guides_ = [-508.0]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(163, 370)
zoom = Vector2(0.645, 0.645)
limit_left = 0
limit_top = 0

[node name="level" type="Node" parent="."]

[node name="barrier" type="StaticBody2D" parent="level"]
position = Vector2(94, 1082)

[node name="CollisionShape2D" type="CollisionShape2D" parent="level/barrier"]
position = Vector2(725, 538)
shape = SubResource("WorldBoundaryShape2D_qk4a2")

[node name="TileMapLayer" type="TileMapLayer" parent="level"]
position = Vector2(1, -1)
tile_map_data = PackedByteArray("AAAlAAgAAQAAAAAAAAAmAAgAAQAAAAAAAAAbAAsAAQAAAAAAAAAbAAwAAQAAAAAAAAAcAAsAAQAAAAAAAAAcAAwAAQAAAAAAAAAdAAsAAQAAAAAAAAAdAAwAAQAAAAAAAAAeAAsAAQAAAAAAAAAeAAwAAQAAAAAAAAAlAAcAAQAAAAAAAAAmAAcAAQAAAAAAAAAnAAcAAQAAAAAAAAAnAAgAAQAAAAAAAAAoAAcAAQAAAAAAAAAoAAgAAQAAAAAAAAAxAAUAAQAAAAAAAAAxAAYAAQAAAAAAAAAyAAUAAQAAAAAAAAAyAAYAAQAAAAAAAAAzAAUAAQAAAAAAAAAzAAYAAQAAAAAAAAAwAAUAAQAAAAAAAAAwAAYAAQAAAAAAAAA9AAMAAQAAAAAAAAA9AAQAAQAAAAAAAGA9AAUAAQAAAAAAAGA+AAMAAQAAAAAAAAA+AAQAAQAAAAAAAGA+AAUAAQAAAAAAAGA/AAMAAQAAAAAAAAA/AAQAAQAAAAAAAGA/AAUAAQAAAAAAAGBAAAMAAQAAAAAAAABAAAQAAQAAAAAAAGBAAAUAAQAAAAAAAGBBAAMAAQAAAAAAAABBAAQAAQAAAAAAAGBBAAUAAQAAAAAAAGBCAAMAAQAAAAAAAGBCAAQAAQAAAAAAAGBCAAUAAQAAAAAAAGBaAA4AAQAAAAAAAABaAA8AAQAAAAAAAABaABAAAQAAAAAAAABaABEAAQAAAAAAAABaABIAAQAAAAAAAABaABMAAQAAAAAAAABaABQAAQAAAAAAAABaABUAAQAAAAAAAABaABYAAQAAAAAAAABaABcAAQAAAAAAAABaABgAAQAAAAAAAABaABkAAQAAAAAAAABaABoAAQAAAAAAAABaABsAAQAAAAAAAABaABwAAQAAAAAAAABaAB0AAQAAAAAAAABaAB4AAQAAAAAAAABaAB8AAQAAAAAAAABaACAAAQAAAAAAAABaACEAAQAAAAAAAABaACIAAQAAAAAAAABaACMAAQAAAAAAAABbAA4AAQAAAAAAAABbAA8AAQAAAAAAAABbABAAAQAAAAAAAABbABEAAQAAAAAAAABbABIAAQAAAAAAAABbABMAAQAAAAAAAABbABQAAQAAAAAAAABbABUAAQAAAAAAAABbABYAAQAAAAAAAABbABcAAQAAAAAAAABbABgAAQAAAAAAAABbABkAAQAAAAAAAABbABoAAQAAAAAAAABbABsAAQAAAAAAAABbABwAAQAAAAAAAABbAB0AAQAAAAAAAABbAB4AAQAAAAAAAABbAB8AAQAAAAAAAABbACAAAQAAAAAAAABbACEAAQAAAAAAAABbACIAAQAAAAAAAABbACMAAQAAAAAAAABcAA4AAQAAAAAAAABcAA8AAQAAAAAAAABcABAAAQAAAAAAAABcABEAAQAAAAAAAABcABIAAQAAAAAAAABcABMAAQAAAAAAAABcABQAAQAAAAAAAABcABUAAQAAAAAAAABcABYAAQAAAAAAAABcABcAAQAAAAAAAABcABgAAQAAAAAAAABcABkAAQAAAAAAAABcABoAAQAAAAAAAABcABsAAQAAAAAAAABcABwAAQAAAAAAAABcAB0AAQAAAAAAAABcAB4AAQAAAAAAAABcAB8AAQAAAAAAAABcACAAAQAAAAAAAABcACEAAQAAAAAAAABcACIAAQAAAAAAAABcACMAAQAAAAAAAABdAA4AAQAAAAAAAABdAA8AAQAAAAAAAABdABAAAQAAAAAAAABdABEAAQAAAAAAAABdABIAAQAAAAAAAABdABMAAQAAAAAAAABdABQAAQAAAAAAAABdABUAAQAAAAAAAABdABYAAQAAAAAAAABdABcAAQAAAAAAAABdABgAAQAAAAAAAABdABkAAQAAAAAAAABdABoAAQAAAAAAAABdABsAAQAAAAAAAABdABwAAQAAAAAAAABdAB0AAQAAAAAAAABdAB4AAQAAAAAAAABdAB8AAQAAAAAAAABdACAAAQAAAAAAAABdACEAAQAAAAAAAABdACIAAQAAAAAAAABdACMAAQAAAAAAAABeAA4AAQAAAAAAAABeAA8AAQAAAAAAAABeABAAAQAAAAAAAABeABEAAQAAAAAAAABeABIAAQAAAAAAAABeABMAAQAAAAAAAABeABQAAQAAAAAAAABeABUAAQAAAAAAAABeABYAAQAAAAAAAABeABcAAQAAAAAAAABeABgAAQAAAAAAAABeABkAAQAAAAAAAABeABoAAQAAAAAAAABeABsAAQAAAAAAAABeABwAAQAAAAAAAABeAB0AAQAAAAAAAABeAB4AAQAAAAAAAABeAB8AAQAAAAAAAABeACAAAQAAAAAAAABeACEAAQAAAAAAAABeACIAAQAAAAAAAABeACMAAQAAAAAAAABfAA4AAQAAAAAAAABfAA8AAQAAAAAAAABfABAAAQAAAAAAAABfABEAAQAAAAAAAABfABIAAQAAAAAAAABfABMAAQAAAAAAAABfABQAAQAAAAAAAABfABUAAQAAAAAAAABfABYAAQAAAAAAAABfABcAAQAAAAAAAABfABgAAQAAAAAAAABfABkAAQAAAAAAAABfABoAAQAAAAAAAABfABsAAQAAAAAAAABfABwAAQAAAAAAAABfAB0AAQAAAAAAAABfAB4AAQAAAAAAAABfAB8AAQAAAAAAAABfACAAAQAAAAAAAABfACEAAQAAAAAAAABfACIAAQAAAAAAAABfACMAAQAAAAAAAABgAAsAAQAAAAAAAABgAAwAAQAAAAAAAABgAA0AAQAAAAAAAABgAA4AAQAAAAAAAABgAA8AAQAAAAAAAABgABAAAQAAAAAAAABgABEAAQAAAAAAAABgABIAAQAAAAAAAABgABMAAQAAAAAAAABgABQAAQAAAAAAAABgABUAAQAAAAAAAABgABYAAQAAAAAAAABgABcAAQAAAAAAAABgABgAAQAAAAAAAABgABkAAQAAAAAAAABgABoAAQAAAAAAAABgABsAAQAAAAAAAABgABwAAQAAAAAAAABgAB0AAQAAAAAAAABgAB4AAQAAAAAAAABgAB8AAQAAAAAAAABgACAAAQAAAAAAAABgACEAAQAAAAAAAABgACIAAQAAAAAAAABgACMAAQAAAAAAAABhAAsAAQAAAAAAAABhAAwAAQAAAAAAAABhAA0AAQAAAAAAAABhAA4AAQAAAAAAAABhAA8AAQAAAAAAAABhABAAAQAAAAAAAABhABEAAQAAAAAAAABhABIAAQAAAAAAAABhABMAAQAAAAAAAABhABQAAQAAAAAAAABhABUAAQAAAAAAAABhABYAAQAAAAAAAABhABcAAQAAAAAAAABhABgAAQAAAAAAAABhABkAAQAAAAAAAABhABoAAQAAAAAAAABhABsAAQAAAAAAAABhABwAAQAAAAAAAABhAB0AAQAAAAAAAABhAB4AAQAAAAAAAABhAB8AAQAAAAAAAABhACAAAQAAAAAAAABhACEAAQAAAAAAAABhACIAAQAAAAAAAABhACMAAQAAAAAAAABiAAsAAQAAAAAAAABiAAwAAQAAAAAAAABiAA0AAQAAAAAAAABiAA4AAQAAAAAAAABiAA8AAQAAAAAAAABiABAAAQAAAAAAAABiABEAAQAAAAAAAABiABIAAQAAAAAAAABiABMAAQAAAAAAAABiABQAAQAAAAAAAABiABUAAQAAAAAAAABiABYAAQAAAAAAAABiABcAAQAAAAAAAABiABgAAQAAAAAAAABiABkAAQAAAAAAAABiABoAAQAAAAAAAABiABsAAQAAAAAAAABiABwAAQAAAAAAAABiAB0AAQAAAAAAAABiAB4AAQAAAAAAAABiAB8AAQAAAAAAAABiACAAAQAAAAAAAABiACEAAQAAAAAAAABiACIAAQAAAAAAAABiACMAAQAAAAAAAABjAAsAAQAAAAAAAABjAAwAAQAAAAAAAABjAA0AAQAAAAAAAABjAA4AAQAAAAAAAABjAA8AAQAAAAAAAABjABAAAQAAAAAAAABjABEAAQAAAAAAAABjABIAAQAAAAAAAABjABMAAQAAAAAAAABjABQAAQAAAAAAAABjABUAAQAAAAAAAABjABYAAQAAAAAAAABjABcAAQAAAAAAAABjABgAAQAAAAAAAABjABkAAQAAAAAAAABjABoAAQAAAAAAAABjABsAAQAAAAAAAABjABwAAQAAAAAAAABjAB0AAQAAAAAAAABjAB4AAQAAAAAAAABjAB8AAQAAAAAAAABjACAAAQAAAAAAAABjACEAAQAAAAAAAABjACIAAQAAAAAAAABjACMAAQAAAAAAAABkAAsAAQAAAAAAAABkAAwAAQAAAAAAAABkAA0AAQAAAAAAAABkAA4AAQAAAAAAAABkAA8AAQAAAAAAAABkABAAAQAAAAAAAABkABEAAQAAAAAAAABkABIAAQAAAAAAAABkABMAAQAAAAAAAABkABQAAQAAAAAAAABkABUAAQAAAAAAAABkABYAAQAAAAAAAABkABcAAQAAAAAAAABkABgAAQAAAAAAAABkABkAAQAAAAAAAABkABoAAQAAAAAAAABkABsAAQAAAAAAAABkABwAAQAAAAAAAABkAB0AAQAAAAAAAABkAB4AAQAAAAAAAABkAB8AAQAAAAAAAABkACAAAQAAAAAAAABkACEAAQAAAAAAAABkACIAAQAAAAAAAABkACMAAQAAAAAAAABlAAsAAQAAAAAAAABlAAwAAQAAAAAAAABlAA0AAQAAAAAAAABlAA4AAQAAAAAAAABlAA8AAQAAAAAAAABlABAAAQAAAAAAAABlABEAAQAAAAAAAABlABIAAQAAAAAAAABlABMAAQAAAAAAAABlABQAAQAAAAAAAABlABUAAQAAAAAAAABlABYAAQAAAAAAAABlABcAAQAAAAAAAABlABgAAQAAAAAAAABlABkAAQAAAAAAAABlABoAAQAAAAAAAABlABsAAQAAAAAAAABlABwAAQAAAAAAAABlAB0AAQAAAAAAAABlAB4AAQAAAAAAAABlAB8AAQAAAAAAAABlACAAAQAAAAAAAABlACEAAQAAAAAAAABlACIAAQAAAAAAAABlACMAAQAAAAAAAABmAAsAAQAAAAAAAABmAAwAAQAAAAAAAABmAA0AAQAAAAAAAABmAA4AAQAAAAAAAABmAA8AAQAAAAAAAABmABAAAQAAAAAAAABmABEAAQAAAAAAAABmABIAAQAAAAAAAABmABMAAQAAAAAAAABmABQAAQAAAAAAAABmABUAAQAAAAAAAABmABYAAQAAAAAAAABmABcAAQAAAAAAAABmABgAAQAAAAAAAABmABkAAQAAAAAAAABmABoAAQAAAAAAAABmABsAAQAAAAAAAABmABwAAQAAAAAAAABmAB0AAQAAAAAAAABmAB4AAQAAAAAAAABmAB8AAQAAAAAAAABmACAAAQAAAAAAAABmACEAAQAAAAAAAABmACIAAQAAAAAAAABmACMAAQAAAAAAAABnAAsAAQAAAAAAAABnAAwAAQAAAAAAAABnAA0AAQAAAAAAAABnAA4AAQAAAAAAAABnAA8AAQAAAAAAAABnABAAAQAAAAAAAABnABEAAQAAAAAAAABnABIAAQAAAAAAAABnABMAAQAAAAAAAABnABQAAQAAAAAAAABnABUAAQAAAAAAAABnABYAAQAAAAAAAABnABcAAQAAAAAAAABnABgAAQAAAAAAAABnABkAAQAAAAAAAABnABoAAQAAAAAAAABnABsAAQAAAAAAAABnABwAAQAAAAAAAABnAB0AAQAAAAAAAABnAB4AAQAAAAAAAABnAB8AAQAAAAAAAABnACAAAQAAAAAAAABnACEAAQAAAAAAAABnACIAAQAAAAAAAABnACMAAQAAAAAAAABoAAsAAQAAAAAAAABoAAwAAQAAAAAAAABoAA0AAQAAAAAAAABoAA4AAQAAAAAAAABoAA8AAQAAAAAAAABoABAAAQAAAAAAAABoABEAAQAAAAAAAABoABIAAQAAAAAAAABoABMAAQAAAAAAAABoABQAAQAAAAAAAABoABUAAQAAAAAAAABoABYAAQAAAAAAAABoABcAAQAAAAAAAABoABgAAQAAAAAAAABoABkAAQAAAAAAAABoABoAAQAAAAAAAABoABsAAQAAAAAAAABoABwAAQAAAAAAAABoAB0AAQAAAAAAAABoAB4AAQAAAAAAAABoAB8AAQAAAAAAAABoACAAAQAAAAAAAABoACEAAQAAAAAAAABoACIAAQAAAAAAAABoACMAAQAAAAAAAABpAAsAAQAAAAAAAABpAAwAAQAAAAAAAABpAA0AAQAAAAAAAABpAA4AAQAAAAAAAABpAA8AAQAAAAAAAABpABAAAQAAAAAAAABpABEAAQAAAAAAAABpABIAAQAAAAAAAABpABMAAQAAAAAAAABpABQAAQAAAAAAAABpABUAAQAAAAAAAABpABYAAQAAAAAAAABpABcAAQAAAAAAAABpABgAAQAAAAAAAABpABkAAQAAAAAAAABpABoAAQAAAAAAAABpABsAAQAAAAAAAABpABwAAQAAAAAAAABpAB0AAQAAAAAAAABpAB4AAQAAAAAAAABpAB8AAQAAAAAAAABpACAAAQAAAAAAAABpACEAAQAAAAAAAABpACIAAQAAAAAAAABpACMAAQAAAAAAAAA9AAYAAQAAAAAAAAA+AAYAAQAAAAAAAAA/AAYAAQAAAAAAAABAAAYAAQAAAAAAAABBAAYAAQAAAAAAAABCAAYAAQAAAAAAAABaAA0AAQAAAAAAAABbAA0AAQAAAAAAAABcAA0AAQAAAAAAAABdAAsAAQAAAAAAAABdAAwAAQAAAAAAAABdAA0AAQAAAAAAAABeAAsAAQAAAAAAAABeAAwAAQAAAAAAAABeAA0AAQAAAAAAAABfAAsAAQAAAAAAAABfAAwAAQAAAAAAAABfAA0AAQAAAAAAAABaAAsAAQAAAAAAAABaAAwAAQAAAAAAAABbAAsAAQAAAAAAAABbAAwAAQAAAAAAAABcAAsAAQAAAAAAAABcAAwAAQAAAAAAAABEAAsAAQAAAAAAAABEAAwAAQAAAAAAAABFAAsAAQAAAAAAAABFAAwAAQAAAAAAAABGAAsAAQAAAAAAAABGAAwAAQAAAAAAAABHAAsAAQAAAAAAAABHAAwAAQAAAAAAAABIAAsAAQAAAAAAAABIAAwAAQAAAAAAAABJAAsAAQAAAAAAAABJAAwAAQAAAAAAAABKAAsAAQAAAAAAAABKAAwAAQAAAAAAAABLAAsAAQAAAAAAAABLAAwAAQAAAAAAAABMAAsAAQAAAAAAAABMAAwAAQAAAAAAAABNAAsAAQAAAAAAAABNAAwAAQAAAAAAAABOAAsAAQAAAAAAAABOAAwAAQAAAAAAAABPAAsAAQAAAAAAAABPAAwAAQAAAAAAAABQAAsAAQAAAAAAAABQAAwAAQAAAAAAAABRAAsAAQAAAAAAAABRAAwAAQAAAAAAAABSAAsAAQAAAAAAAABSAAwAAQAAAAAAAABTAAsAAQAAAAAAAABTAAwAAQAAAAAAAABUAAsAAQAAAAAAAABUAAwAAQAAAAAAAABVAAsAAQAAAAAAAABVAAwAAQAAAAAAAABWAAsAAQAAAAAAAABWAAwAAQAAAAAAAABXAAsAAQAAAAAAAABXAAwAAQAAAAAAAABYAAsAAQAAAAAAAABYAAwAAQAAAAAAAABZAAsAAQAAAAAAAABZAAwAAQAAAAAAAABDAAMAAQAAAAAAAABDAAQAAQAAAAAAAABDAAUAAQAAAAAAAABDAAYAAQAAAAAAAABEAAMAAQAAAAAAAABEAAQAAQAAAAAAAABEAAUAAQAAAAAAAABEAAYAAQAAAAAAAABFAAMAAQAAAAAAAABFAAQAAQAAAAAAAABFAAUAAQAAAAAAAABFAAYAAQAAAAAAAABGAAMAAQAAAAAAAABGAAQAAQAAAAAAAABGAAUAAQAAAAAAAABGAAYAAQAAAAAAAABHAAMAAQAAAAAAAABHAAQAAQAAAAAAAABHAAUAAQAAAAAAAABHAAYAAQAAAAAAAABIAAMAAQAAAAAAAABIAAQAAQAAAAAAAABIAAUAAQAAAAAAAABIAAYAAQAAAAAAAABJAAMAAQAAAAAAAABJAAQAAQAAAAAAAABJAAUAAQAAAAAAAABJAAYAAQAAAAAAAABKAAMAAQAAAAAAAABKAAQAAQAAAAAAAABKAAUAAQAAAAAAAABKAAYAAQAAAAAAAABLAAMAAQAAAAAAAABLAAQAAQAAAAAAAABLAAUAAQAAAAAAAABLAAYAAQAAAAAAAABMAAMAAQAAAAAAAABMAAQAAQAAAAAAAABMAAUAAQAAAAAAAABMAAYAAQAAAAAAAABNAAMAAQAAAAAAAABNAAQAAQAAAAAAAABNAAUAAQAAAAAAAABNAAYAAQAAAAAAAABOAAMAAQAAAAAAAABOAAQAAQAAAAAAAABOAAUAAQAAAAAAAABOAAYAAQAAAAAAAABPAAMAAQAAAAAAAABPAAQAAQAAAAAAAABPAAUAAQAAAAAAAABPAAYAAQAAAAAAAABQAAMAAQAAAAAAAABQAAQAAQAAAAAAAABQAAUAAQAAAAAAAABQAAYAAQAAAAAAAABRAAMAAQAAAAAAAABRAAQAAQAAAAAAAABRAAUAAQAAAAAAAABRAAYAAQAAAAAAAABSAAMAAQAAAAAAAABSAAQAAQAAAAAAAABSAAUAAQAAAAAAAABSAAYAAQAAAAAAAABTAAMAAQAAAAAAAABTAAQAAQAAAAAAAABTAAUAAQAAAAAAAABTAAYAAQAAAAAAAABUAAMAAQAAAAAAAABUAAQAAQAAAAAAAABUAAUAAQAAAAAAAABUAAYAAQAAAAAAAABVAAMAAQAAAAAAAABVAAQAAQAAAAAAAABVAAUAAQAAAAAAAABVAAYAAQAAAAAAAABWAAMAAQAAAAAAAABWAAQAAQAAAAAAAABWAAUAAQAAAAAAAABWAAYAAQAAAAAAAABXAAMAAQAAAAAAAABXAAQAAQAAAAAAAABXAAUAAQAAAAAAAABXAAYAAQAAAAAAAABYAAMAAQAAAAAAAABYAAQAAQAAAAAAAABYAAUAAQAAAAAAAABYAAYAAQAAAAAAAABZAAMAAQAAAAAAAABZAAQAAQAAAAAAAABZAAUAAQAAAAAAAABZAAYAAQAAAAAAAABaAAMAAQAAAAAAAABaAAQAAQAAAAAAAABaAAUAAQAAAAAAAABaAAYAAQAAAAAAAABbAAMAAQAAAAAAAABbAAQAAQAAAAAAAABbAAUAAQAAAAAAAABbAAYAAQAAAAAAAABcAAMAAQAAAAAAAABcAAQAAQAAAAAAAABcAAUAAQAAAAAAAABcAAYAAQAAAAAAAABdAAMAAQAAAAAAAABdAAQAAQAAAAAAAABdAAUAAQAAAAAAAABdAAYAAQAAAAAAAABeAAMAAQAAAAAAAABeAAQAAQAAAAAAAABeAAUAAQAAAAAAAABeAAYAAQAAAAAAAAAAAA8AAQAAAAAAAAAAABAAAQAAAAAAAAABAA8AAQAAAAAAAAABABAAAQAAAAAAAAACAA8AAQAAAAAAAAACABAAAQAAAAAAAAADAA8AAQAAAAAAAAADABAAAQAAAAAAAAAEAA8AAQAAAAAAAAAEABAAAQAAAAAAAAAFAA8AAQAAAAAAAAAFABAAAQAAAAAAAAAGAA8AAQAAAAAAAAAGABAAAQAAAAAAAAAHAA8AAQAAAAAAAAAHABAAAQAAAAAAAAAIAA8AAQAAAAAAAAAIABAAAQAAAAAAAAAJAA8AAQAAAAAAAAAJABAAAQAAAAAAAAAKAA8AAQAAAAAAAAAKABAAAQAAAAAAAAALAA8AAQAAAAAAAAALABAAAQAAAAAAAAAMAA8AAQAAAAAAAAAMABAAAQAAAAAAAAANAA8AAQAAAAAAAAANABAAAQAAAAAAAAAOAA8AAQAAAAAAAAAOABAAAQAAAAAAAAAPAA8AAQAAAAAAAAAPABAAAQAAAAAAAAAQAA8AAQAAAAAAAAAQABAAAQAAAAAAAAARAA8AAQAAAAAAAAARABAAAQAAAAAAAAASAA8AAQAAAAAAAAASABAAAQAAAAAAAAATAA8AAQAAAAAAAAATABAAAQAAAAAAAAAUAA8AAQAAAAAAAAAUABAAAQAAAAAAAAAVAA8AAQAAAAAAAAAVABAAAQAAAAAAAAAWAA8AAQAAAAAAAAAWABAAAQAAAAAAAAA/AB4AAQAAAAAAAAA/AB8AAQAAAAAAAAA/ACAAAQAAAAAAAAA/ACEAAQAAAAAAAABAAB4AAQAAAAAAAABAAB8AAQAAAAAAAABAACAAAQAAAAAAAABAACEAAQAAAAAAAABBAB4AAQAAAAAAAABBAB8AAQAAAAAAAABBACAAAQAAAAAAAABBACEAAQAAAAAAAABCAB4AAQAAAAAAAABCAB8AAQAAAAAAAABCACAAAQAAAAAAAABCACEAAQAAAAAAAABDAB4AAQAAAAAAAABDAB8AAQAAAAAAAABDACAAAQAAAAAAAABDACEAAQAAAAAAAABEAB4AAQAAAAAAAABEAB8AAQAAAAAAAABEACAAAQAAAAAAAABEACEAAQAAAAAAAABFAB4AAQAAAAAAAABFAB8AAQAAAAAAAABFACAAAQAAAAAAAABFACEAAQAAAAAAAABGAB4AAQAAAAAAAABGAB8AAQAAAAAAAABGACAAAQAAAAAAAABGACEAAQAAAAAAAABHAB4AAQAAAAAAAABHAB8AAQAAAAAAAABHACAAAQAAAAAAAABHACEAAQAAAAAAAABIAB4AAQAAAAAAAABIAB8AAQAAAAAAAABIACAAAQAAAAAAAABIACEAAQAAAAAAAABJAB4AAQAAAAAAAABJAB8AAQAAAAAAAABJACAAAQAAAAAAAABJACEAAQAAAAAAAABKAB4AAQAAAAAAAABKAB8AAQAAAAAAAABKACAAAQAAAAAAAABKACEAAQAAAAAAAABLAB4AAQAAAAAAAABLAB8AAQAAAAAAAABLACAAAQAAAAAAAABLACEAAQAAAAAAAABMAB4AAQAAAAAAAABMAB8AAQAAAAAAAABMACAAAQAAAAAAAABMACEAAQAAAAAAAABNAB4AAQAAAAAAAABNAB8AAQAAAAAAAABNACAAAQAAAAAAAABNACEAAQAAAAAAAABOAB4AAQAAAAAAAABOAB8AAQAAAAAAAABOACAAAQAAAAAAAABOACEAAQAAAAAAAABPAB4AAQAAAAAAAABPAB8AAQAAAAAAAABPACAAAQAAAAAAAABPACEAAQAAAAAAAABQAB4AAQAAAAAAAABQAB8AAQAAAAAAAABQACAAAQAAAAAAAABQACEAAQAAAAAAAABRAB4AAQAAAAAAAABRAB8AAQAAAAAAAABRACAAAQAAAAAAAABRACEAAQAAAAAAAABSAB4AAQAAAAAAAABSAB8AAQAAAAAAAABSACAAAQAAAAAAAABSACEAAQAAAAAAAABTAB4AAQAAAAAAAABTAB8AAQAAAAAAAABTACAAAQAAAAAAAABTACEAAQAAAAAAAABUAB4AAQAAAAAAAABUAB8AAQAAAAAAAABUACAAAQAAAAAAAABUACEAAQAAAAAAAABVAB4AAQAAAAAAAABVAB8AAQAAAAAAAABVACAAAQAAAAAAAABVACEAAQAAAAAAAABWAB4AAQAAAAAAAABWAB8AAQAAAAAAAABWACAAAQAAAAAAAABWACEAAQAAAAAAAABXAB4AAQAAAAAAAABXAB8AAQAAAAAAAABXACAAAQAAAAAAAABXACEAAQAAAAAAAABYAB4AAQAAAAAAAABYAB8AAQAAAAAAAABYACAAAQAAAAAAAABYACEAAQAAAAAAAABZAB4AAQAAAAAAAABZAB8AAQAAAAAAAABZACAAAQAAAAAAAABZACEAAQAAAAAAAAArABYAAQAAAAAAAAAsABYAAQAAAAAAAAAtABYAAQAAAAAAAAAuABYAAQAAAAAAAAAvABYAAQAAAAAAAAAdABYAAQAAAAAAAAAeABYAAQAAAAAAAAAfABYAAQAAAAAAAAAgABYAAQAAAAAAAAAJACUAAQAAAAAAAAAJACYAAQAAAAAAAAAJACcAAQAAAAAAAAAJACgAAQAAAAAAAAAKACUAAQAAAAAAAAAKACYAAQAAAAAAAAAKACcAAQAAAAAAAAAKACgAAQAAAAAAAAALACUAAQAAAAAAAAALACYAAQAAAAAAAAALACcAAQAAAAAAAAALACgAAQAAAAAAAAAVABEAAQAAAAAAAAAVABIAAQAAAAAAAAAWABEAAQAAAAAAAAAWABIAAQAAAAAAAAAVABMAAQAAAAAAAAAWABMAAQAAAAAAAAAWABQAAQAAAAAAAAAFACUAAQAAAAAAAAAFACYAAQAAAAAAAAAFACcAAQAAAAAAAAAFACgAAQAAAAAAAAAGACUAAQAAAAAAAAAGACYAAQAAAAAAAAAGACcAAQAAAAAAAAAGACgAAQAAAAAAAAAHACUAAQAAAAAAAAAHACYAAQAAAAAAAAAHACcAAQAAAAAAAAAHACgAAQAAAAAAAAAIACUAAQAAAAAAAAAIACYAAQAAAAAAAAAIACcAAQAAAAAAAAAIACgAAQAAAAAAAAAbABYAAQAAAAAAAAAcABYAAQAAAAAAAAAqABYAAQAAAAAAAAA=")
tile_set = SubResource("TileSet_480xm")

[node name="sticks" parent="." instance=ExtResource("1_gxvrf")]
position = Vector2(163, 370)
claw_speed_curve = SubResource("Curve_0oq46")

[node name="clawstate" type="Label" parent="."]
z_index = 10
offset_right = 649.0
offset_bottom = 282.0
theme_override_font_sizes/font_size = 55
text = "sdafasdafsd"

[node name="testCamera" parent="sticks" instance=ExtResource("4_heske")]
position = Vector2(-163, -370)

[connection signal="retract_claw" from="sticks" to="." method="_on_sticks_retract_claw"]
[connection signal="shoot_claw" from="sticks" to="." method="_on_sticks_shoot_claw"]
